# datafusion_ai

./: Cargo.toml
src/: llm_udf.rs  llm_utils.rs  main.rs  ollama_utils.rs
