[package]
name = "datafusion_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "46.0.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
datafusion-common = "46.0.1"
datafusion-expr = "46.0.1"
datafusion-doc = "46.0.1"
datafusion-macros = "46.0.1"
rayon = "1.10.0"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git" }
anyhow = "1.0.97"
encoding_rs = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.1"
